[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vikrant-obliteratus"
version = "2.0.0"
description = "Advanced abliteration framework with fine-tuning, voice support, collaboration & security scanning"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-or-later"}
keywords = ["abliteration", "mechanistic-interpretability", "refusal-removal", "llm", "transformers", "alignment", "fine-tuning", "collaboration", "voice-llm", "security"]
authors = [
    {name = "Vikrant", email = "vikrant@project.ai"}
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "datasets>=2.14",
    "accelerate>=0.24",
    "safetensors>=0.4",
    "pyyaml>=6.0",
    "rich>=13.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "tqdm>=4.64",
    "bitsandbytes>=0.46.1",
    "peft>=0.7.0",
    "trl>=0.7.0",
    "openai-whisper>=20230314",
    "torchaudio>=2.0",
    "fastapi>=0.104.0",
    "websockets>=12.0",
    "redis>=5.0.0",
    "reportlab>=4.0.0",
    "click>=8.1.0",
]

[project.urls]
"Homepage" = "https://github.com/vikrant-project/vikrant-OBLITERATUS"
"Repository" = "https://github.com/vikrant-project/vikrant-OBLITERATUS"
"Bug Tracker" = "https://github.com/vikrant-project/vikrant-OBLITERATUS/issues"
"Documentation" = "https://github.com/vikrant-project/vikrant-OBLITERATUS/blob/main/README.md"
"HuggingFace Space" = "https://huggingface.co/spaces/vikrant-project/vikrant-obliteratus"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff", "mypy", "black>=24.0"]
spaces = ["gradio>=5.0,<6.0"]
audio = ["bark>=0.1.0", "xtts>=0.0.1"]
collab = ["aioredis>=2.0", "python-socketio>=5.10"]
scanner = ["cryptography>=41.0", "hashlib>=20081119"]
all = ["vikrant-obliteratus[dev,spaces,audio,collab,scanner]"]

[project.scripts]
vobl = "vikrant_obl.cli:main"

[tool.setuptools.packages.find]
include = ["vikrant_obl*"]

[tool.setuptools.package-data]
vikrant_obl = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']